examples/negative/09_sibling_scope_refer.hema
# BREAKS: a `refer` reaching into a sibling scope's declaration (INV-6
#   snapshot isolation: sibling exports are not name-resolvable).
# EXPECT: E0301
part p:
    feature hole
part q:
    refer hole
